--- a/index.html
+++ b/index.html
@@ -23,14 +23,41 @@
             <div class="card">
                 <img src="assets/img/male1.png" alt="Maschio1">
                 <h3 class="name">MARCO BIANCHI</h3>
+                <span class="work">Designer</span>
+                <a class="mail" href="#">marcobianchi@team.com</a>
             </div>
-            <div class="card"></div>
-            <div class="card"></div>
+            <div class="card">
+                 <img src="assets/img/female1.png" alt="Femmina1">
+                <h3 class="name">LAURA ROSSI</h3>
+                <span class="work">Front-end Developer</span>
+                <a class="mail" href="#">laurarossi@team.com</a>
+            </div>
+            <div class="card">
+                 <img src="assets/img/male2.png" alt="Maschio2">
+                <h3 class="name">GIORGIO VERDI</h3>
+                <span class="work">Back-end Developer</span>
+                <a class="mail" href="#">giorgioverdi@team.com</a>
+            </div>
         </section>
         <section class="row">
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
+            <div class="card">
+                <img src="assets/img/female2.png" alt="Femmina2">
+                <h3 class="name">MARTA IPSUM</h3>
+                <span class="work">SEO Specialist</span>
+                <a class="mail" href="#">martaipsum@team.com</a>
+            </div>
+            <div class="card">
+                <img src="assets/img/male3.png" alt="Maschio3">
+                <h3 class="name">ROBERTO LOREM</h3>
+                <span class="work">Projet Manager</span>
+                <a class="mail" href="#">robertolorem@team.com</a>
+            </div>
+            <div class="card">
+                <img src="assets/img/female3.png" alt="Femmina3">
+                <h3 class="name">DANIELA AMET</h3>
+                <span class="work">Analyst</span>
+                <a class="mail" href="#">danielaamet@team.com</a>
+            </div>
         </section>
     </main>
 </body>
